# Voxel2Stl

./: CMakeLists.txt  README.md
include/: voxel2stl.hpp
scripts/: voxel2stl.py
src/: CMakeLists.txt  main.cpp  voxel2stl.cpp
